Added ghoul tooltip (ES)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22266,7 +22266,7 @@
       </notes>
       <segment>
         <source>Diese Aktion ermöglicht es dir, diesen Bürger zu verschlingen, um deinen unersättlichen Heißhunger zu stillen!</source>
-        <target>Diese Aktion ermöglicht es dir, diesen Bürger zu verschlingen, um deinen unersättlichen Heißhunger zu stillen!</target>
+        <target>¡Esta acción te permite devorar a otro habitante para calmar tu apetito... voraz!</target>
       </segment>
     </unit>
     <unit id="rfxQCmg">
