--- a/translations/season+intl-icu.en.xlf
+++ b/translations/season+intl-icu.en.xlf
@@ -15,7 +15,7 @@
     <unit id="MKuQjMi" name="Saison 0.13">
       <notes>
         <note category="german">Saison 0.13</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.13</source>
@@ -25,7 +25,7 @@
     <unit id="ZahwwoN" name="Saison 0.12">
       <notes>
         <note category="german">Saison 0.12</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.12</source>
@@ -135,7 +135,7 @@
     <unit id="VwuJDaU" name="Saison 0.1">
       <notes>
         <note category="german">Galgenvögel</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.1</source>
@@ -146,7 +146,7 @@
       <notes>
         <note category="german">Saison 0.0</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.0</source>
